--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
     "next": "14.0.0",
+    "pdf-parse": "^2.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
