--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@googleapis/healthcare": "^18.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@types/node-fetch": "^2.6.13",
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
     "next": "14.0.0",
-    "pdf-parse": "^2.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
