fix: some prompting

--- a/.env.local.example
+++ b/.env.local.example
@@ -13,6 +13,12 @@ ANTHROPIC_API_KEY=your-anthropic-api-key
 # ONCOKB_API_KEY=your-oncokb-api-key
 # ONCOKB_BASE_URL=https://oncokb.org/api/v1
 
+# ClinVar E-utilities Configuration
+# CLINVAR_EUTILS=https://eutils.ncbi.nlm.nih.gov/entrez/eutils
+
+# DGIdb API Configuration
+# DGIDB_BASE_URL=https://dgidb.org/api
+
 # Demo Authentication
 DEMO_SECRET=change_this_in_production
 NEXT_PUBLIC_DEMO_SECRET=change_this_in_production
